corsの設定を追加した。

--- a/ai-budget-app-api/.env.example
+++ b/ai-budget-app-api/.env.example
@@ -8,3 +8,7 @@ DB_SSLMODE=require
 
 # Application Configuration
 LOG_LEVEL=info
+
+DATABASE_URL=postgres://aibudget:aibudget_dev_password@localhost:5432/ai_budget_db?sslmode=disable
+
+FRONTEND_URL=http://localhost:5173
