本番環境へのマイグレーションを実施した。

--- a/ai-budget-app-api/atlas.hcl.sample
+++ b/ai-budget-app-api/atlas.hcl.sample
@@ -9,3 +9,15 @@ env "dev" {
     dir = "file://migrations"
   }
 }
+
+env "prod" {
+  src = "file://schema.sql"
+
+  # devとurlにpostgresのurlを入れてください
+  dev = *****
+  url = *****
+
+  migration {
+    dir = "file://migrations/prd"
+  }
+}
