corsの設定と、セキュリティ周りの設定修正

--- a/ai-budget-app-api/.env.example
+++ b/ai-budget-app-api/.env.example
@@ -12,3 +12,5 @@ LOG_LEVEL=info
 DATABASE_URL=postgres://aibudget:aibudget_dev_password@localhost:5432/ai_budget_db?sslmode=disable
 
 FRONTEND_URL=http://localhost:5173
+
+GOOGLE_APPLICATION_CREDENTIALS_JSON = { *** }
