--- a/.github/workflows/ecr-build-push.yml
+++ b/.github/workflows/ecr-build-push.yml
@@ -32,7 +32,9 @@ jobs:
       # Dockerイメージのビルド
       - name: Build Docker image
         run: |
-          docker build -t ${{ secrets.ECR_REPOSITORY }}:${{ secrets.IMAGE_TAG }} -f Dockerfile .
+          docker build -t ${{ secrets.ECR_REPOSITORY }}:${{ secrets.IMAGE_TAG }} \
+            -f ai-budget-app-api/Dockerfile \
+            ai-budget-app-api
 
       # Dockerイメージのタグ付け
       - name: Tag Docker image
